# TAED2_Synopsis

./: .env.template  Makefile  README.md  dvc.yaml  pyproject.toml
.dvc/: config
docs/: dataset_card.md  model_card.md
gx/: great_expectations.yml
gx/checkpoints/: validation_checkpoint.json
gx/data_docs/: index.html
gx/data_docs/expectations/: data_quality_validation.html
gx/data_docs/validations/data_quality_validation/__none__/20251012T122543.223484Z/: data_check-clean_test.html  data_check-clean_train.html  data_check-clean_val.html  data_check-raw_test.html  data_check-raw_train.html  data_check-raw_val.html
gx/data_docs/validations/data_quality_validation/__none__/20251012T123012.568416Z/: data_check-clean_test.html  data_check-clean_train.html  data_check-clean_val.html  data_check-raw_test.html  data_check-raw_train.html  data_check-raw_val.html
gx/data_docs/validations/data_quality_validation/__none__/20251012T124008.075354Z/: data_check-clean_test.html  data_check-clean_train.html  data_check-clean_val.html  data_check-raw_test.html  data_check-raw_train.html  data_check-raw_val.html
gx/data_docs/validations/data_quality_validation/__none__/20251014T125030.516951Z/: data_check-clean_test.html  data_check-clean_train.html  data_check-clean_val.html  data_check-raw_test.html  data_check-raw_train.html  data_check-raw_val.html
gx/data_docs/validations/data_quality_validation/__none__/20251014T130120.260945Z/: data_check-clean_test.html  data_check-clean_train.html  data_check-clean_val.html  data_check-raw_test.html  data_check-raw_train.html  data_check-raw_val.html
gx/data_docs/validations/data_quality_validation/__none__/20251014T130745.622058Z/: data_check-clean_test.html  data_check-clean_train.html  data_check-clean_val.html  data_check-raw_test.html  data_check-raw_train.html  data_check-raw_val.html
gx/data_docs/validations/data_quality_validation/__none__/20251014T132240.585699Z/: data_check-clean_test.html  data_check-clean_train.html  data_check-clean_val.html  data_check-raw_test.html  data_check-raw_train.html  data_check-raw_val.html
gx/data_docs/validations/data_quality_validation/__none__/20251016T105500.985266Z/: data_check-clean_test.html  data_check-clean_train.html  data_check-clean_val.html  data_check-raw_test.html  data_check-raw_train.html  data_check-raw_val.html
gx/data_docs/validations/data_quality_validation/__none__/20251016T105757.227793Z/: data_check-clean_test.html  data_check-clean_train.html  data_check-clean_val.html  data_check-raw_test.html  data_check-raw_train.html  data_check-raw_val.html
gx/expectations/: .ge_store_backend_id  data_quality_validation.json
gx/validation_definitions/: clean_test_validator.json  clean_train_validator.json  clean_val_validator.json  raw_test_validator.json  raw_train_validator.json  raw_val_validator.json
reports/: emissions_report.json  eval.xml
src/: dataset.py  gx_context_configurations.py  gx_customexpectation.py  gx_validate_data.py  news_scraper.py  try_news_scraper.py
src/backend/app/: config.py  main.py  middleware.py
src/backend/app/api/: api.py
src/backend/app/api/endpoints/: analyze.py  health.py  summarize.py
src/backend/app/services/: analyzer.py  models.py  news_scraper.py  summarizer.py  try_news_scraper.py
src/data/scripts/: get_raw_data.py
src/frontend/app/: index.html  package-lock.json  package.json  vite.config.ts
src/frontend/app/src/: App.css  App.tsx
src/frontend/app/src/components/: EmotionChart.tsx
src/modeling/: news_scraper.py  predict.py  train.py  train1.2.py  train2.py  try_news_scraper.py
tests/: test.py  test_backend.py  test_model.py  test_news_scraper.py
(+42 files in other folders)
