[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "An AI-powered news summarization tool that extracts content from article URLs."
authors = [
  { name = "Synopsis" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "datasets>=4.1.0",
    "dotenv>=0.9.9",
    "dvc>=3.63.0",
    "fastapi>=0.116.2",
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "mlflow>=3.4.0",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "tqdm",
    "typer",
    "uvicorn[standard]>=0.35.0",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvtx-cu12==12.8.90",
    "outcome==1.3.0.post0",
    "pysocks==1.7.1",
    "regex==2025.9.18",
    "requests-toolbelt==1.0.0",
    "safetensors==0.6.2",
    "selenium==4.36.0",
    "sortedcontainers==2.4.0",
    "sympy==1.14.0",
    "tokenizers==0.22.1",
    "torch==2.8.0",
    "transformers==4.57.0",
    "trio==0.31.0",
    "trio-websocket==0.12.2",
    "triton==3.4.0",
    "webdriver-manager==4.0.2",
    "wsproto==1.2.0",
    "cloudscraper",
    "pysentimiento",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

[tool.pytest.ini_options]
pythonpath = "."
testpaths = "tests"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pylint>=3.3.8",
    "pytest>=8.4.2",
]

